src/objects/GC_Customer_Pen_Analytic__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Penetration__c</fullName>
        <formula>Record_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Penetration %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Execution_Time__c</fullName>
        <label>Execution Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <label>Customer Penetration</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>GC Customer Pen Analytic Snapshot</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GC Customer Pen Analytic Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>